overflow-fixed-del

--- a/gArena/css/esl-one-news.css
+++ b/gArena/css/esl-one-news.css
@@ -233,7 +233,6 @@
 	padding-left: 5px;
 	margin-bottom: 3px;
 	padding: 6px;
-	overflow: hidden;
 	position: relative;
 	margin-left: 20px;
 	display: flex;
